@@ -62,6 +62,14 @@ int MPI_Exscan(void *sendbuf, void *recvbuf, int count,
         OMPI_ERRHANDLER_CHECK(err, comm, err, FUNC_NAME);
     }
 
+    /* Do we need to do anything? (MPI says that reductions have to
+       have a count of at least 1, but at least IMB calls reduce with
+       a count of 0 -- blah!) */
+
+    if (0 == count) {
+        return MPI_SUCCESS;
+    }
+
     /* Invoke the coll component to perform the back-end operation */
 
     OBJ_RETAIN(op);
